--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center overflow-hidden position-relative"
                                     style="border-radius: 0 15px 15px 0;">
-                                    <img src="img/ngo.jpg" alt="Safari Tours" class="img-fluid w-100 h-100"
+                                    <img src="img/car6.jpeg" alt="Safari Tours" class="img-fluid w-100 h-100"
                                         style="object-fit: cover; min-height: 250px;">
                                     <!-- Optional gradient overlay if desired for exact 'transparent' look, but valid CSS structure is key first -->
                                     <div
@@ -293,7 +293,8 @@
         </nav>
     </div>
 
-    <div class="container-fluid bg-primary py-5 mb-5 hero-header">
+    <div class="container-fluid bg-primary py-5 mb-5 hero-header"
+        style="background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(img/car4.jpeg); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
@@ -386,7 +387,7 @@
 
     <!-- Why Travel With Us Start -->
     <section class="py-5" style="
-    background-image: url('img/car1.jpg');
+    background-image: url('img/car3.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -550,7 +551,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="position-relative h-100">
-                        <img class="img-fluid rounded w-100 h-100" src="img/ngo.jpg" alt="Kilimora Team"
+                        <img class="img-fluid rounded w-100 h-100" src="img/car4.jpeg" alt="Kilimora Team"
                             style="object-fit: cover;">
                     </div>
                 </div>
