--- a/destination-kilimanjaro.html
+++ b/destination-kilimanjaro.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>Mount Kilimanjaro - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Kilimanjaro, Mountain, Climbing, Hiking, Tanzania">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
-        name="description" content="Conquer Africa's highest peak, Mount Kilimanjaro, standing at 5,895 meters above sea level.">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords"
+        content="Kilimanjaro, Mountain, Climbing, Hiking, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration." name="description"
+        content="Conquer Africa's highest peak, Mount Kilimanjaro, standing at 5,895 meters above sea level.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -242,7 +243,7 @@
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center overflow-hidden position-relative"
                                     style="border-radius: 0 15px 15px 0;">
-                                    <img src="img/ngo.jpg" alt="Safari Tours" class="img-fluid w-100 h-100"
+                                    <img src="img/car6.jpeg" alt="Safari Tours" class="img-fluid w-100 h-100"
                                         style="object-fit: cover; min-height: 250px;">
                                     <!-- Optional gradient overlay if desired for exact 'transparent' look, but valid CSS structure is key first -->
                                     <div
@@ -347,7 +348,9 @@
                     <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">MOUNT KILIMANJARO</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">Conquer Africa's highest peak, Mount Kilimanjaro, standing majestically at 5,895 meters above sea level. It is the world's highest free-standing mountain.</p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Conquer Africa's highest peak, Mount
+                        Kilimanjaro, standing majestically at 5,895 meters above sea level. It is the world's highest
+                        free-standing mountain.</p>
                 </div>
             </div>
         </div>
@@ -372,14 +375,19 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Mount Kilimanjaro</h2>
                         </div>
-                        <p class="mb-4">Mount Kilimanjaro is Africa's highest mountain, standing at 5,895 meters (19,341 feet) above sea level. Located in northeastern Tanzania, this dormant volcano is one of the world's most accessible high summits.</p>
-                        <p class="mb-4">The mountain has three volcanic cones: Kibo, Mawenzi, and Shira. The climb takes you through five distinct climate zones, from cultivated land and rainforest to moorland, alpine desert, and finally the arctic summit.</p></div>
+                        <p class="mb-4">Mount Kilimanjaro is Africa's highest mountain, standing at 5,895 meters (19,341
+                            feet) above sea level. Located in northeastern Tanzania, this dormant volcano is one of the
+                            world's most accessible high summits.</p>
+                        <p class="mb-4">The mountain has three volcanic cones: Kibo, Mawenzi, and Shira. The climb takes
+                            you through five distinct climate zones, from cultivated land and rainforest to moorland,
+                            alpine desert, and finally the arctic summit.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-        <!-- Highlights Section -->
+    <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -467,7 +475,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <img class="img-fluid tour-img" src="img/tembo.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
                                 <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
@@ -523,7 +531,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <img class="img-fluid tour-img" src="img/chui1.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
                                     Days</span>
@@ -680,7 +688,7 @@
         </div>
     </section>
 
-        <!-- FAQ Section -->
+    <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -700,7 +708,8 @@
                             <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The best times are the warm and dry months: <strong>January to March</strong> and <strong>June to October</strong>.
+                                    The best times are the warm and dry months: <strong>January to March</strong> and
+                                    <strong>June to October</strong>.
                                 </div>
                             </div>
                         </div>
@@ -714,7 +723,8 @@
                             <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Most routes take between <strong>5 to 9 days</strong>. We recommend longer routes (7+ days) for better acclimatization.
+                                    Most routes take between <strong>5 to 9 days</strong>. We recommend longer routes
+                                    (7+ days) for better acclimatization.
                                 </div>
                             </div>
                         </div>
@@ -728,7 +738,8 @@
                             <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>No</strong>, Kilimanjaro is a "walk-up" mountain. You do not need technical climbing gears, but good physical fitness is essential.
+                                    <strong>No</strong>, Kilimanjaro is a "walk-up" mountain. You do not need technical
+                                    climbing gears, but good physical fitness is essential.
                                 </div>
                             </div>
                         </div>
