--- a/destination-manyara.html
+++ b/destination-manyara.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>Lake Manyara National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Lake Manyara, Tree-climbing Lions, Flamingos, Safari, Tanzania">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
-        name="description" content="Discover Lake Manyara National Park, famous for tree-climbing lions and spectacular birdlife.">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords"
+        content="Lake Manyara, Tree-climbing Lions, Flamingos, Safari, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration." name="description"
+        content="Discover Lake Manyara National Park, famous for tree-climbing lions and spectacular birdlife.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -242,7 +243,7 @@
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center overflow-hidden position-relative"
                                     style="border-radius: 0 15px 15px 0;">
-                                    <img src="img/ngo.jpg" alt="Safari Tours" class="img-fluid w-100 h-100"
+                                    <img src="img/car6.jpeg" alt="Safari Tours" class="img-fluid w-100 h-100"
                                         style="object-fit: cover; min-height: 250px;">
                                     <!-- Optional gradient overlay if desired for exact 'transparent' look, but valid CSS structure is key first -->
                                     <div
@@ -347,7 +348,8 @@
                     <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">LAKE MANYARA</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">Discover Lake Manyara National Park, famous for its unique tree-climbing lions and vibrant flamingo populations painting the lake pink.</p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Discover Lake Manyara National Park, famous for
+                        its unique tree-climbing lions and vibrant flamingo populations painting the lake pink.</p>
                 </div>
             </div>
         </div>
@@ -372,14 +374,19 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Lake Manyara</h2>
                         </div>
-                        <p class="mb-4">Lake Manyara National Park is a protected area in Tanzania's Arusha and Manyara Regions, covering an area of 325 square kilometers. The park is famous for its unique tree-climbing lions and large flocks of flamingos that paint the lake pink.</p>
-                        <p class="mb-4">The park offers a diverse landscape including groundwater forests, acacia woodlands, and the alkaline soda lake itself. It is home to over 400 bird species and provides excellent opportunities for birdwatching and photography.</p></div>
+                        <p class="mb-4">Lake Manyara National Park is a protected area in Tanzania's Arusha and Manyara
+                            Regions, covering an area of 325 square kilometers. The park is famous for its unique
+                            tree-climbing lions and large flocks of flamingos that paint the lake pink.</p>
+                        <p class="mb-4">The park offers a diverse landscape including groundwater forests, acacia
+                            woodlands, and the alkaline soda lake itself. It is home to over 400 bird species and
+                            provides excellent opportunities for birdwatching and photography.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-        <!-- Highlights Section -->
+    <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -467,7 +474,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <img class="img-fluid tour-img" src="img/ndege.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
                                 <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
@@ -523,7 +530,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <img class="img-fluid tour-img" src="img/swala.jpeg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
                                     Days</span>
@@ -604,7 +611,7 @@
             </div>
 
             <!-- Ngorongoro Block -->
-            
+
             <!-- Serengeti Block -->
             <div class="row align-items-center mb-5 flex-lg-row-reverse">
                 <div class="col-lg-6 position-relative">
@@ -663,7 +670,7 @@
         </div>
     </section>
 
-        <!-- FAQ Section -->
+    <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -683,7 +690,8 @@
                             <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Lake Manyara is famous for its <strong>tree-climbing lions</strong>, vast flocks of <strong>flamingos</strong>, and diverse landscape.
+                                    Lake Manyara is famous for its <strong>tree-climbing lions</strong>, vast flocks of
+                                    <strong>flamingos</strong>, and diverse landscape.
                                 </div>
                             </div>
                         </div>
@@ -697,7 +705,8 @@
                             <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    For bird watching, the <strong>wet season (November to May)</strong> is ideal as migratory birds arrive and the lake is full.
+                                    For bird watching, the <strong>wet season (November to May)</strong> is ideal as
+                                    migratory birds arrive and the lake is full.
                                 </div>
                             </div>
                         </div>
@@ -711,7 +720,8 @@
                             <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>Yes</strong>, due to its proximity to Arusha (approx. 1.5 - 2 hours), Lake Manyara is perfect for a day trip.
+                                    <strong>Yes</strong>, due to its proximity to Arusha (approx. 1.5 - 2 hours), Lake
+                                    Manyara is perfect for a day trip.
                                 </div>
                             </div>
                         </div>
