--- a/destination-mikumi.html
+++ b/destination-mikumi.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>Mikumi National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Mikumi, Wildlife, Safari, National Park, Tanzania">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
-        name="description" content="Explore Mikumi National Park, Tanzania's fourth-largest national park with abundant wildlife.">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords"
+        content="Mikumi, Wildlife, Safari, National Park, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration." name="description"
+        content="Explore Mikumi National Park, Tanzania's fourth-largest national park with abundant wildlife.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -347,7 +348,9 @@
                     <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">MIKUMI</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">Explore Mikumi National Park, Tanzania's fourth-largest park with abundant wildlife and stunning landscapes, often called "The Little Serengeti".</p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Explore Mikumi National Park, Tanzania's
+                        fourth-largest park with abundant wildlife and stunning landscapes, often called "The Little
+                        Serengeti".</p>
                 </div>
             </div>
         </div>
@@ -372,14 +375,19 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Mikumi</h2>
                         </div>
-                        <p class="mb-4">Mikumi National Park is Tanzania's fourth-largest national park, covering an area of 3,230 square kilometers. Located between the Uluguru Mountains and the Lumango range.</p>
-                        <p class="mb-4">The park is characterized by its Mkata Floodplain, which is often compared to the Serengeti plains due to its open horizons and abundant wildlife including lions, elephants, buffaloes, and zebras.</p></div>
+                        <p class="mb-4">Mikumi National Park is Tanzania's fourth-largest national park, covering an
+                            area of 3,230 square kilometers. Located between the Uluguru Mountains and the Lumango
+                            range.</p>
+                        <p class="mb-4">The park is characterized by its Mkata Floodplain, which is often compared to
+                            the Serengeti plains due to its open horizons and abundant wildlife including lions,
+                            elephants, buffaloes, and zebras.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-        <!-- Highlights Section -->
+    <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -467,7 +475,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <img class="img-fluid tour-img" src="img/punda.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
                                 <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
@@ -523,7 +531,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <img class="img-fluid tour-img" src="img/simba2.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
                                     Days</span>
@@ -680,7 +688,7 @@
         </div>
     </section>
 
-        <!-- FAQ Section -->
+    <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -700,7 +708,8 @@
                             <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Mikumi is very accessible. It is about a <strong>4-5 hour drive</strong> from Dar es Salaam on a good tarmac road.
+                                    Mikumi is very accessible. It is about a <strong>4-5 hour drive</strong> from Dar es
+                                    Salaam on a good tarmac road.
                                 </div>
                             </div>
                         </div>
@@ -714,7 +723,8 @@
                             <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The dry season from <strong>June to October</strong> is best for wildlife viewing as vegetation is thinner.
+                                    The dry season from <strong>June to October</strong> is best for wildlife viewing as
+                                    vegetation is thinner.
                                 </div>
                             </div>
                         </div>
@@ -728,7 +738,8 @@
                             <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    You can see the Mkata Floodplain ecosystem which supports elands, buffaloes, zebras, giraffes, elephants, lions, and leopards.
+                                    You can see the Mkata Floodplain ecosystem which supports elands, buffaloes, zebras,
+                                    giraffes, elephants, lions, and leopards.
                                 </div>
                             </div>
                         </div>
