--- a/destination-ngorongoro.html
+++ b/destination-ngorongoro.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>Ngorongoro Conservation Area - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Ngorongoro, Crater, Safari, Tanzania, Wildlife">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
-        name="description" content="Explore the Ngorongoro Crater, a UNESCO World Heritage Site and natural wonder of Africa.">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords"
+        content="Ngorongoro, Crater, Safari, Tanzania, Wildlife">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration." name="description"
+        content="Explore the Ngorongoro Crater, a UNESCO World Heritage Site and natural wonder of Africa.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -347,7 +348,9 @@
                     <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">NGORONGORO</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">Descend into the world's largest inactive volcanic caldera, a natural amphitheater teeming with wildlife and stunning geological formations.</p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Descend into the world's largest inactive
+                        volcanic caldera, a natural amphitheater teeming with wildlife and stunning geological
+                        formations.</p>
                 </div>
             </div>
         </div>
@@ -372,14 +375,21 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Ngorongoro Crater</h2>
                         </div>
-                        <p class="mb-4">The Ngorongoro Conservation Area constitutes a UNESCO World Heritage Site located 180 km (110 mi) west of Arusha in the Crater Highlands area of Tanzania. The conservation area is named after Ngorongoro Crater, a large volcanic caldera within the area.</p>
-                        <p class="mb-4">The crater, which formed when a large volcano exploded and collapsed on itself two to three million years ago, is 610 meters (2,000 feet) deep and its floor covers 260 square kilometers (100 square miles). It is home to a dense population of wildlife including the Big 5.</p></div>
+                        <p class="mb-4">The Ngorongoro Conservation Area constitutes a UNESCO World Heritage Site
+                            located 180 km (110 mi) west of Arusha in the Crater Highlands area of Tanzania. The
+                            conservation area is named after Ngorongoro Crater, a large volcanic caldera within the
+                            area.</p>
+                        <p class="mb-4">The crater, which formed when a large volcano exploded and collapsed on itself
+                            two to three million years ago, is 610 meters (2,000 feet) deep and its floor covers 260
+                            square kilometers (100 square miles). It is home to a dense population of wildlife including
+                            the Big 5.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-        <!-- Highlights Section -->
+    <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -467,7 +477,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <img class="img-fluid tour-img" src="img/kiboko.jpeg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
                                 <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
@@ -523,7 +533,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <img class="img-fluid tour-img" src="img/lion-eeat-meet.jpeg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
                                     Days</span>
@@ -604,7 +614,7 @@
             </div>
 
             <!-- Ngorongoro Block -->
-            
+
             <!-- Serengeti Block -->
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
@@ -681,7 +691,7 @@
         </div>
     </section>
 
-        <!-- FAQ Section -->
+    <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -701,7 +711,8 @@
                             <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Wildlife viewing inside the crater is excellent <strong>year-round</strong>. However, the dry season (June to October) is often preferred.
+                                    Wildlife viewing inside the crater is excellent <strong>year-round</strong>.
+                                    However, the dry season (June to October) is often preferred.
                                 </div>
                             </div>
                         </div>
@@ -715,7 +726,8 @@
                             <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>Yes</strong>, a 4x4 safari vehicle is mandatory for descending into the Ngorongoro Crater due to the steep terrain.
+                                    <strong>Yes</strong>, a 4x4 safari vehicle is mandatory for descending into the
+                                    Ngorongoro Crater due to the steep terrain.
                                 </div>
                             </div>
                         </div>
@@ -729,7 +741,8 @@
                             <div id="collapse3" class="accordion-collapse collapse " aria-labelledby="heading3"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>Absolutely</strong>. The Ngorongoro Crater is one of the few places in Africa where you have a very high chance of seeing all of the Big 5 in a single day.
+                                    <strong>Absolutely</strong>. The Ngorongoro Crater is one of the few places in
+                                    Africa where you have a very high chance of seeing all of the Big 5 in a single day.
                                 </div>
                             </div>
                         </div>
