--- a/destination-serengeti.html
+++ b/destination-serengeti.html
@@ -478,7 +478,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <img class="img-fluid tour-img" src="img/Zebra-4.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
                                 <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
@@ -534,7 +534,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <img class="img-fluid tour-img" src="img/chui-eat.jpeg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
                                     Days</span>
