--- a/destination-terangile.html
+++ b/destination-terangile.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <title>Tarangire National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords" content="Tarangire, Elephants, Baobab, Safari, Tanzania">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
-        name="description" content="Discover Tarangire National Park, home to massive elephant herds and iconic baobab trees.">
+    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords"
+        content="Tarangire, Elephants, Baobab, Safari, Tanzania">
+    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration." name="description"
+        content="Discover Tarangire National Park, home to massive elephant herds and iconic baobab trees.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -347,7 +348,8 @@
                     <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">TARANGIRE</h1>
-                    <p class="fs-6 text-white mb-4 animated slideInDown">Known as the "Elephant Playground", Tarangire is famous for its massive herds of elephants and ancient baobab trees dotting the landscape.</p>
+                    <p class="fs-6 text-white mb-4 animated slideInDown">Known as the "Elephant Playground", Tarangire
+                        is famous for its massive herds of elephants and ancient baobab trees dotting the landscape.</p>
                 </div>
             </div>
         </div>
@@ -372,14 +374,20 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Tarangire</h2>
                         </div>
-                        <p class="mb-4">Tarangire National Park is a protected area in Tanzania's Manyara Region. The name of the park originates from the Tarangire River that crosses the park. The river is the primary source of fresh water for wild animals in the Tarangire Ecosystem during the annual dry season.</p>
-                        <p class="mb-4">The park is famous for its high density of elephants and baobab trees. Visitors to the park in the June to November dry season can expect to see large herds of thousands of zebra, wildebeest and cape buffalo.</p></div>
+                        <p class="mb-4">Tarangire National Park is a protected area in Tanzania's Manyara Region. The
+                            name of the park originates from the Tarangire River that crosses the park. The river is the
+                            primary source of fresh water for wild animals in the Tarangire Ecosystem during the annual
+                            dry season.</p>
+                        <p class="mb-4">The park is famous for its high density of elephants and baobab trees. Visitors
+                            to the park in the June to November dry season can expect to see large herds of thousands of
+                            zebra, wildebeest and cape buffalo.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-        <!-- Highlights Section -->
+    <!-- Highlights Section -->
     <div class="container-xxl py-5 bg-light">
         <div class="container">
             <div class="d-flex align-items-center mb-5">
@@ -467,7 +475,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/pro3.jpg" alt="">
+                            <img class="img-fluid tour-img" src="img/twiga.jpg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>4 Days</span>
                                 <span class="tour-tag"><i class="fa fa-user text-primary me-2"></i>Family Safari</span>
@@ -523,7 +531,7 @@
                 <div class="package-item">
                     <div class="tour-card">
                         <div class="position-relative">
-                            <img class="img-fluid tour-img" src="img/photo1.jpeg" alt="">
+                            <img class="img-fluid tour-img" src="img/lion9.jpeg" alt="">
                             <div class="tour-tag-box">
                                 <span class="tour-tag"><i class="fa fa-calendar-alt text-primary me-2"></i>10
                                     Days</span>
@@ -604,7 +612,7 @@
             </div>
 
             <!-- Ngorongoro Block -->
-            
+
             <!-- Serengeti Block -->
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 position-relative">
@@ -645,7 +653,7 @@
         </div>
     </section>
 
-        <!-- FAQ Section -->
+    <!-- FAQ Section -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -665,7 +673,8 @@
                             <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    The best time is during the <strong>dry season (June to October)</strong> when animals migrate to the Tarangire River.
+                                    The best time is during the <strong>dry season (June to October)</strong> when
+                                    animals migrate to the Tarangire River.
                                 </div>
                             </div>
                         </div>
@@ -679,7 +688,8 @@
                             <div id="collapse2" class="accordion-collapse collapse " aria-labelledby="heading2"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    Tarangire is most famous for its <strong>massive elephant herds</strong> and iconic <strong>baobab trees</strong>.
+                                    Tarangire is most famous for its <strong>massive elephant herds</strong> and iconic
+                                    <strong>baobab trees</strong>.
                                 </div>
                             </div>
                         </div>
