--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 </div>
                                 <div class="col-lg-8 d-flex align-items-center justify-content-center overflow-hidden position-relative"
                                     style="border-radius: 0 15px 15px 0;">
-                                    <img src="img/ngo.jpg" alt="Safari Tours" class="img-fluid w-100 h-100"
+                                    <img src="img/car6.jpeg" alt="Safari Tours" class="img-fluid w-100 h-100"
                                         style="object-fit: cover; min-height: 250px;">
                                     <!-- Optional gradient overlay if desired for exact 'transparent' look, but valid CSS structure is key first -->
                                     <div
